# interview_prep

./: .gitignore  README.md  pyproject.toml  questions.txt
2_algorithms/: queue.txt
2_algorithms/patterns/: trie_traversal.py
2_algorithms/recursion/: 2A_factorials.py  3B_is_palindrome.py  4B_inorder_tree_traversal.py  4C_find_eight_letter_name.py  4D_max_tree_depth.py  5A_sum_array_of_ints.py  6B_permutations_with_repitition.py  6C_getting_k_combos.py  6D_combination_sum.py
3_system_design/: framework.txt  sql.txt
4_behavioral/: behavioral.txt
4_product_design/: README.md
5_behavioral/: README.md
6_devops/: devops.txt
algorithms/: README.md  algorithms.md  main.py  tmp.py
algorithms/leetcode/: 102_binary_tree_level.py  122_best_time_to_buy_sell.py  150_evaluate_reverse_polish.py  155_min_stack.py  200_number_of_islands.py  208_implement_trie.py  322_coin_change.py  3_longest_substring.py  45_jump_game.py  46_permutations.py  973_k_closest_points.py  98_validate_ bst.py  994_rotting_oranges.py  reverse_linked_list.py
algorithms/patterns/: binary_search_tree.py  breadth_first_search.py  depth_first_search.py  dijkstras.py  min_heap.py  recursion.py
algorithms/practice/: 53_max_subarray.py  542_01_matrix.py  57_insert_interval.py  largest_rectange_histogram.py
algorithms/recursion/: 10_binary_search.py  11_sum_array_of_ints.py  12_permutations_no_repitition.py  14_getting_k_combos.py  (+26 more)
api_design/: api.txt
behavioral/: behavioral.txt
data_structures/: README.md  data_structures.md  trie.py
database/: nosql.txt
java/: java.txt
oop/: oop.txt
(+80 files in other folders)
